@@ -17,7 +17,6 @@
 '''
 
 import re
-import xbmc
 from six.moves import urllib_parse
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
@@ -27,7 +26,6 @@ site = AdultSite('latestporn', '[COLOR hotpink]LatestPorn[/COLOR]', 'https://lat
 
 @site.register(default_mode=True)
 def Main():
-    #site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url + 'categories/', 'Categories', site.img_cat)
     site.add_dir('[COLOR hotpink]Movies[/COLOR]', site.url + 'category/movies/', 'List', site.img_cat)
     site.add_dir('[COLOR hotpink]Tags[/COLOR]', site.url, 'Tags', site.img_cat)
     site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + '?s=', 'Search', site.img_search)
@@ -38,7 +36,7 @@ def Main():
 @site.register()
 def List(url):
     listhtml = utils.getHtml(url, '')
-    match = re.compile(r'id="post-\d*".*?href="([^"]+)".*?data-src="([^"]+)".*?title="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    match = re.compile(r'id=post-\d*\s.*?href="??([^"\s]+)"??.*?data-src="??([^"\s]+)"??.*?title="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(listhtml)
     if not match:
         return
     for videopage, img, name in match:
@@ -46,13 +44,13 @@ def List(url):
 
         contextmenu = []
         contexturl = (utils.addon_sys
-                          + "?mode=" + str('latestporn.Lookupinfo')
-                          + "&url=" + urllib_parse.quote_plus(videopage))
+                      + "?mode=" + str('latestporn.Lookupinfo')
+                      + "&url=" + urllib_parse.quote_plus(videopage))
         contextmenu.append(('[COLOR deeppink]Lookup info[/COLOR]', 'RunPlugin(' + contexturl + ')'))
 
         site.add_download_link(name, videopage, 'Playvid', img, name, contextm=contextmenu)
 
-    np = re.compile(r'rel="next"\s*href="([^"]+)"', re.DOTALL | re.IGNORECASE).search(listhtml)
+    np = re.compile(r'rel="??next"??\s*href="??([^"\s]+)"??', re.DOTALL | re.IGNORECASE).search(listhtml)
     if np:
         page_number = np.group(1).split('/')[-2]
         site.add_dir('Next Page (' + page_number + ')', np.group(1), 'List', site.img_next)
@@ -68,7 +66,7 @@ def Playvid(url, name, download=None):
     direct = re.compile("video=([^&]+)&", re.DOTALL | re.IGNORECASE).findall(phtml)
     if direct:
         links['Direct'] = direct[0]
-    sources = re.compile(r'href="([^"]+)"\s*rel="noopener"', re.DOTALL | re.IGNORECASE).findall(phtml)
+    sources = re.compile(r'href="??([^"\s]+)"??\s*rel="??noopener"??', re.DOTALL | re.IGNORECASE).findall(phtml)
     for link in sources:
         if '.rar' in link:
             continue
@@ -78,11 +76,8 @@ def Playvid(url, name, download=None):
     if not videourl:
         vp.progress.close()
         return
-    if 'Direct' in links:
-        if links['Direct'] == videourl:
-            vp.play_from_direct_link(videourl)
-        else:
-            vp.play_from_link_to_resolve(videourl)
+    if 'Direct' in links and links['Direct'] == videourl:
+        vp.play_from_direct_link(videourl)
     else:
         vp.play_from_link_to_resolve(videourl)
 
@@ -91,7 +86,7 @@ def Playvid(url, name, download=None):
 def Search(url, keyword=None):
     searchUrl = url
     if not keyword:
-        site.search_dir(url, 'Search')
+        site.search_dir(searchUrl, 'Search')
     else:
         title = keyword.replace(' ', '+')
         searchUrl = searchUrl + title
@@ -101,18 +96,17 @@ def Search(url, keyword=None):
 @site.register()
 def Tags(url):
     listhtml = utils.getHtml(url)
-    match = re.compile(r'/(tag/[^"]+)"\s*class="tag-cloud-link.*?aria-label="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    match = re.compile(r'/(tag/[^\s]+)"??\s*class="??tag-cloud-link.*?aria-label="??([^"\s]+)"??', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for tagpage, name in match:
         name = utils.cleantext(name.strip())
         site.add_dir(name, site.url + tagpage, 'List', '')
-
     utils.eod()
 
 
 @site.register()
 def Lookupinfo(url):
     lookup_list = [
-        ("Tag", r'/(tag/[^"]+)"\s*rel="tag">([^<]+)', '')
+        ("Tag", r'/(tag/[^"\s]+)"??\s*rel="??tag"??>([^<]+)', '')
     ]
 
     lookupinfo = utils.LookupInfo(site.url, url, 'latestporn.List', lookup_list)
